--- a/styles/main.css
+++ b/styles/main.css
@@ -77,6 +77,7 @@ nav * {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  overflow: hidden;
 }
 
 .main-links.show {
@@ -124,19 +125,25 @@ nav * {
 
   .main-links {
     display: none;
+    background: rgb(33, 3, 64);
     flex-direction: column;
     position: absolute;
     width: 100%;
+    height: fit-content;
     left: 0;
     top: 100%;
   }
 
   .main-links li {
+    width: 100%;
     padding: 0.7rem 10px;
+    border: 2px solid transparent;
+    text-align: center;
+    overflow: hidden;
   }
 
   .main-links li:hover {
-    transform: scale(1.3);
     font-weight: bold;
+    border-color: rgb(91, 13, 168);
   }
 }
