--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,10 @@ body {
   height: 100vh;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Heading Section */
 header {
   height: 120px;
@@ -150,4 +154,53 @@ nav * {
   .main-links li:hover a {
     color: rgb(176, 97, 255);
   }
+}
+
+/* All sections */
+
+.main-link-section {
+  padding: 10px;
+}
+
+.main-link-section fieldset {
+  border-color: rgb(45, 7, 91);
+  border-radius: 8px;
+  padding: 10px;
+}
+
+.main-link-section fieldset legend {
+  font-family: "Michroma", sans-serif;
+  font-weight: normal;
+  border: 2px solid rgb(60, 8, 112);
+  border-radius: 8px;
+  width: fit-content;
+  padding: 5px 15px;
+  margin-bottom: 10px;
+  margin-left: 15px;
+}
+
+.main-link-section fieldset nav {
+  background: rgb(33, 3, 64);
+  padding: 5px 10px;
+}
+
+.main-link-section fieldset nav .searchBar {
+  padding-block: 10px 20px;
+}
+
+.main-link-section fieldset nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.main-link-section fieldset nav ul li {
+  text-decoration: none;
+}
+
+.main-link-section fieldset .content {
+  border: 2px solid rgb(122, 104, 139);
+  border-radius: 8px;
+  padding: 10px;
+  margin-block: 10px;
 }
