--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,21 @@
   box-sizing: border-box;
 }
 
+:root {
+  --main-bg: #111;
+  --header-bg1: rgb(42, 10, 82);
+  --header-bg2: rgb(96, 71, 147);
+  --h1-color: rgba(128, 101, 236, 0.908);
+  --main-links-hover: rgb(197, 125, 255);
+  --hb-main-nav-links-hover: rgb(96, 71, 147);
+  --main-text-color: #fff;
+  --navbar-bg: rgb(30, 6, 59);
+  --section-navbar-bg: rgb(33, 3, 64);
+}
+
 body {
-  background: black;
-  color: white;
+  background: var(--main-bg);
+  color: var(--main-text-color);
   width: 100%;
   height: 100vh;
 }
@@ -19,7 +31,11 @@ html {
 header {
   height: 120px;
   padding: 10px;
-  background: linear-gradient(90deg, rgb(42, 10, 82) 30%, rgb(96, 71, 147) 80%);
+  background: linear-gradient(
+    90deg,
+    var(--header-bg1) 30%,
+    var(--header-bg2) 80%
+  );
   display: flex;
   align-items: center;
   position: relative;
@@ -43,7 +59,7 @@ header {
 
 .heading-content h1 {
   margin-bottom: 6px;
-  color: rgba(128, 101, 236, 0.908);
+  color: var(--h1-color);
   font-family: "Michroma", sans-serif;
   font-size: clamp(1rem, 3.5vw, 1.5rem);
   font-weight: 400;
@@ -62,7 +78,7 @@ nav * {
 
 .navbar {
   height: 60px;
-  background: rgb(29, 1, 64);
+  background: var(--navbar-bg);
   padding: 0.8rem 1rem;
   position: relative;
 }
@@ -70,7 +86,7 @@ nav * {
 .hamburger {
   background: none;
   border: none;
-  color: white;
+  color: var(--main-color);
   font: normal 1.5rem sans-serif;
   cursor: pointer;
   display: none;
@@ -95,7 +111,7 @@ nav * {
 }
 
 .main-links li a {
-  color: white;
+  color: var(--main-text-color);
   text-decoration: none;
   font-size: clamp(0.8rem, 3vw, 1.1rem);
   position: relative;
@@ -108,7 +124,7 @@ nav * {
   height: 2px;
   bottom: -8px;
   left: 0;
-  background: rgb(197, 125, 255);
+  background: var(--main-links-hover);
   transition: width 0.5s ease;
 }
 
@@ -129,7 +145,7 @@ nav * {
 
   .main-links {
     display: none;
-    background: rgb(33, 3, 64);
+    background: var(--navbar-bg);
     flex-direction: column;
     position: absolute;
     width: 100%;
@@ -141,19 +157,13 @@ nav * {
   .main-links li {
     width: 100%;
     padding: 0.7rem 10px;
-    /* border: 2px solid transparent; */
     text-align: center;
     overflow: hidden;
   }
 
   .main-links li:hover {
     font-weight: bold;
-    background: rgb(96, 71, 147);
-    /* border-color: rgb(91, 13, 168); */
-  }
-
-  .main-links li:hover a {
-    /* color: rgb(176, 97, 255); */
+    background: var(--hb-main-nav-links-hover);
   }
 }
 
@@ -164,7 +174,7 @@ nav * {
 }
 
 .main-link-section fieldset {
-  border-color: rgb(45, 7, 91);
+  border-color: var(--section-navbar-bg);
   border-radius: 8px;
   padding: 10px;
 }
@@ -181,7 +191,7 @@ nav * {
 }
 
 .main-link-section fieldset nav {
-  background: rgb(33, 3, 64);
+  background: var(--section-navbar-bg);
   padding: 5px 10px;
 }
 
