--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --main-bg: #111;
+  --main-bg: #000;
   --header-bg1: rgb(42, 10, 82);
   --header-bg2: rgb(96, 71, 147);
   --h1-color: rgba(128, 101, 236, 0.908);
@@ -170,10 +170,16 @@ nav * {
 
 /* All sections */
 
+main {
+  box-sizing: border-box;
+  margin: 10px;
+}
+
 .main-link-section {
   background: var(--section-navbar-bg);
+  width: 100%;
   padding: 10px;
-  margin: 10px;
+  margin-bottom: 15px;
   border-radius: 8px;
 }
 
@@ -195,6 +201,7 @@ nav * {
 }
 
 .main-link-section fieldset nav {
+  width: 100%;
   background: var(--header-bg2);
   border-radius: 8px;
   text-align: center;
@@ -237,6 +244,7 @@ nav * {
   list-style: none;
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .main-link-section fieldset nav ul li {
@@ -273,4 +281,27 @@ nav * {
   padding: 15px 10px;
   margin: 15px 0px 10px 30px;
   font-family: "Orbitron", sans-serif;
+}
+
+/* Responsive main-link Section */
+@media (max-width: 760px) {
+  main {
+    text-align: center;
+  }
+
+  .main-link-section fieldset legend {
+    margin-left: 0;
+  }
+
+  .main-link-section fieldset nav .searchBar {
+    flex-direction: column;
+  }
+
+  .main-link-section fieldset .content h2 {
+    margin-left: 0;
+  }
+
+  .main-link-section fieldset .content .sub-content {
+    margin: 15px 0px;
+  }
 }
