--- a/styles/main.css
+++ b/styles/main.css
@@ -287,6 +287,7 @@ main {
 @media (max-width: 760px) {
   main {
     text-align: center;
+    margin: 0px 0px 10px 0px;
   }
 
   .main-link-section fieldset legend {
