--- a/styles/main.css
+++ b/styles/main.css
@@ -34,11 +34,12 @@ html {
 
 /* Note Section */
 .noteHeading {
-  background: #8888888f;
+  background: #888888aa;
   padding: 10px;
   border-radius: 8px;
   display: flex;
   justify-content: flex-end;
+  margin-bottom: 10px;
 }
 
 .noteHeading .add-notes-btn {
@@ -58,4 +59,6 @@ html {
 
 .noteGrid {
   height: 500px;
+  background: #888888aa;
+  border-radius: 8px;
 }
