--- a/styles/main.css
+++ b/styles/main.css
@@ -57,6 +57,7 @@ html {
   color: white;
 }
 
+/* Dialog Section */
 dialog {
   position: fixed;
   top: 50%;
@@ -64,7 +65,52 @@ dialog {
   transform: translate(-50%, -50%);
   z-index: 999;
 
-  padding: 10px;
+  padding: 15px 10px;
+  background: rgb(92, 22, 182);
+  border-radius: 8px;
+}
+
+dialog form {
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+}
+
+dialog form input {
+  border-radius: 8px;
+  padding: 4px 12px;
+  border: none;
+  outline: none;
+  font-size: 1.3rem;
+  text-align: center;
+}
+
+dialog form textarea {
+  padding: 5px;
+  border-radius: 8px;
+  font-size: 1.2rem;
+  font-family: monospace;
+}
+
+.buttons {
+  width: 80%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.buttons button {
+  padding: 5px 15px;
+  border-radius: 8px;
+  font-weight: bold;
+  border: none;
+  outline: none;
+}
+
+.buttons button:hover {
+  background: rgb(191, 153, 220);
+  color: rgb(29, 2, 56);
 }
 
 .noteGrid {
